[gd_scene load_steps=13 format=3 uid="uid://tcckc601ceki"]

[ext_resource type="Script" uid="uid://bg8gi7qa4s4qq" path="res://scenes/world.gd" id="1_f3sb7"]
[ext_resource type="PackedScene" uid="uid://bxhthg1im0w32" path="res://scenes/floating_creature.tscn" id="2_036b0"]
[ext_resource type="AudioStream" uid="uid://cbwlovwtan8pm" path="res://assets/audio/sfx/buttons/Accept.wav" id="2_i7141"]
[ext_resource type="Texture2D" uid="uid://dr1cqjdwtdh76" path="res://assets/sprites/bg.png" id="2_qfnet"]
[ext_resource type="PackedScene" uid="uid://bbetjgrjbsdi8" path="res://scenes/ui/creature_card.tscn" id="2_tlwt5"]
[ext_resource type="AudioStream" uid="uid://bnsaxyysdda1x" path="res://assets/audio/sfx/other/Suicide.wav" id="3_4mrxx"]
[ext_resource type="PackedScene" uid="uid://d288g7tvym65q" path="res://scenes/ui/shop_panel.tscn" id="3_aqk2v"]
[ext_resource type="AudioStream" uid="uid://h7ev0taycnca" path="res://assets/audio/sfx/other/No_Action.wav" id="4_7r4gi"]
[ext_resource type="AudioStream" uid="uid://3dttvdpdjbu7" path="res://assets/audio/sfx/other/Game_End.wav" id="5_q5onr"]
[ext_resource type="AudioStream" uid="uid://dm5knn6xtsp0n" path="res://assets/audio/sfx/buttons/Click.wav" id="5_w7kh3"]
[ext_resource type="Texture2D" uid="uid://t4yejuuqutgx" path="res://assets/sprites/ui/money.png" id="8_4mrxx"]
[ext_resource type="Script" path="res://audio/sound_button.gd" id="10_e3hyu"]

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_f3sb7")
sfx_next_loop = ExtResource("2_i7141")
sfx_suicide = ExtResource("3_4mrxx")
sfx_no_action = ExtResource("4_7r4gi")
sfx_game_over = ExtResource("5_q5onr")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
offset = Vector2(-480, -50)
zoom = Vector2(0.8, 0.8)

[node name="BgLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="bg" type="TextureRect" parent="BgLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_qfnet")
metadata/_edit_use_anchors_ = true

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="FloatingCreature" parent="UI" instance=ExtResource("2_036b0")]
unique_name_in_owner = true
position = Vector2(0, 1)
scale = Vector2(0.25, 0.25)

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LeftSideUI" type="VBoxContainer" parent="UI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(494, 0)
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="CreatureCard" parent="UI/MarginContainer/HBoxContainer/LeftSideUI" instance=ExtResource("2_tlwt5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2

[node name="ShopPanel" parent="UI/MarginContainer/HBoxContainer/LeftSideUI" instance=ExtResource("3_aqk2v")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer/LeftSideUI"]
layout_mode = 2

[node name="CurrencyContainer" type="PanelContainer" parent="UI/MarginContainer/HBoxContainer/LeftSideUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer/LeftSideUI/VBoxContainer/CurrencyContainer"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="CurrencyCount" type="Label" parent="UI/MarginContainer/HBoxContainer/LeftSideUI/VBoxContainer/CurrencyContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "150"
vertical_alignment = 1

[node name="CurrencySymbol" type="TextureRect" parent="UI/MarginContainer/HBoxContainer/LeftSideUI/VBoxContainer/CurrencyContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_4mrxx")
expand_mode = 3

[node name="NextLoopButton" type="Button" parent="UI/MarginContainer/HBoxContainer/LeftSideUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Run Loop"

[node name="ScoreContainer" type="CenterContainer" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="ProgressBarScore" type="ProgressBar" parent="UI/MarginContainer/HBoxContainer/ScoreContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(380, 50)
layout_mode = 2
step = 1.0
value = 50.0
show_percentage = false

[node name="LabelScore" type="Label" parent="UI/MarginContainer/HBoxContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SCORE:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonAdd" type="Button" parent="UI/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "add new creature"

[node name="LabelLoop" type="Label" parent="UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
text = "Loop #1"

[node name="DefeatScreen" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.114897, 0.114897, 0.114897, 0.717647)
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="UI/DefeatScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -292.0
offset_right = 214.5
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="MarginContainer" parent="UI/DefeatScreen/PanelContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DefeatScreen/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/DefeatScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.415686, 0.356863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 110
text = "DEFEAT"
horizontal_alignment = 1

[node name="DefeatLoopLabel" type="Label" parent="UI/DefeatScreen/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Loop: ?"
horizontal_alignment = 1

[node name="Retry" type="Button" parent="UI/DefeatScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "try again"
script = ExtResource("10_e3hyu")
click_sound = ExtResource("5_w7kh3")

[node name="Exit" type="Button" parent="UI/DefeatScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"
script = ExtResource("10_e3hyu")
click_sound = ExtResource("5_w7kh3")

[node name="VictoryScreen" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.114897, 0.114897, 0.114897, 0.717647)
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="UI/VictoryScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -292.0
offset_right = 214.5
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="MarginContainer" parent="UI/VictoryScreen/PanelContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VictoryScreen/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.415686, 0.356863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 110
text = "Victory !"
horizontal_alignment = 1

[node name="VictoryLoopLabel" type="Label" parent="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Loop: N"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 110)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"SmallPurpleButton"
text = "continue"
script = ExtResource("10_e3hyu")
click_sound = ExtResource("5_w7kh3")

[node name="Retry" type="Button" parent="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "try again"
script = ExtResource("10_e3hyu")
click_sound = ExtResource("5_w7kh3")

[node name="Exit" type="Button" parent="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"
script = ExtResource("10_e3hyu")
click_sound = ExtResource("5_w7kh3")

[node name="SFX_Player" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[connection signal="floating_creature_asked" from="UI/MarginContainer/HBoxContainer/LeftSideUI/ShopPanel" to="." method="_on_shop_panel_floating_creature_asked"]
[connection signal="item_exited" from="UI/MarginContainer/HBoxContainer/LeftSideUI/ShopPanel" to="." method="_on_shop_panel_item_exited"]
[connection signal="item_hovered" from="UI/MarginContainer/HBoxContainer/LeftSideUI/ShopPanel" to="." method="_on_shop_panel_item_hovered"]
[connection signal="rerolled" from="UI/MarginContainer/HBoxContainer/LeftSideUI/ShopPanel" to="." method="_on_shop_panel_rerolled"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/LeftSideUI/VBoxContainer/NextLoopButton" to="." method="_on_next_loop_button_pressed"]
[connection signal="pressed" from="UI/DefeatScreen/PanelContainer/CenterContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="UI/DefeatScreen/PanelContainer/CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="UI/VictoryScreen/PanelContainer/CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
